--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -3,22 +3,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>Nutz demo:: hello Mvc</display-name>
-	<filter>
-		<filter-name>LoginFilter</filter-name>
-		<filter-class>com.zhuangjb.web.filter.LoginFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>LoginFilter</filter-name>
-		<url-pattern>*.action</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>LoginFilter</filter-name>
-		<url-pattern>*.json</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>LoginFilter</filter-name>
-		<url-pattern>/</url-pattern>
-	</filter-mapping>
+	<!--<filter>-->
+		<!--<filter-name>LoginFilter</filter-name>-->
+		<!--<filter-class>com.zhuangjb.web.filter.LoginFilter</filter-class>-->
+	<!--</filter>-->
+	<!--<filter-mapping>-->
+		<!--<filter-name>LoginFilter</filter-name>-->
+		<!--<url-pattern>*.action</url-pattern>-->
+	<!--</filter-mapping>-->
+	<!--<filter-mapping>-->
+		<!--<filter-name>LoginFilter</filter-name>-->
+		<!--<url-pattern>*.json</url-pattern>-->
+	<!--</filter-mapping>-->
+	<!--<filter-mapping>-->
+		<!--<filter-name>LoginFilter</filter-name>-->
+		<!--<url-pattern>/</url-pattern>-->
+	<!--</filter-mapping>-->
 	<!--
 		将 Nutz.Mvc 框架挂接在任何 JSP/Servlet 容器中的办法之一就是显示的声明它。 它提供了一个 HttpServlet
 		(org.nutz.mvc.NutzServlet) 的实现，你需要为它 声明一个参数，这个参数指出一个类名，这个类就是你的应用的唯一配置。
@@ -58,6 +58,10 @@
 			<param-value>true</param-value>
 		</init-param>
 	</filter>
+	<filter-mapping>
+		<filter-name>msgs</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
 
 	<filter-mapping>
 		<filter-name>msgs</filter-name>
