--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -19,6 +19,29 @@
 		<filter-name>LoginFilter</filter-name>
 		<url-pattern>/</url-pattern>
 	</filter-mapping>
+
+	<filter>
+		<filter-name>msgs</filter-name>
+		<filter-class>org.nutz.mvc.NutFilter</filter-class>
+		<init-param>
+			<param-name>skip-mode</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>msgs</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>msgs</filter-name>
+		<url-pattern>*.jsp</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>msgs</filter-name>
+		<url-pattern>*.jspx</url-pattern>
+	</filter-mapping>
 	<!--
 		将 Nutz.Mvc 框架挂接在任何 JSP/Servlet 容器中的办法之一就是显示的声明它。 它提供了一个 HttpServlet
 		(org.nutz.mvc.NutzServlet) 的实现，你需要为它 声明一个参数，这个参数指出一个类名，这个类就是你的应用的唯一配置。
@@ -44,35 +67,15 @@
 		<servlet-name>nutz-demo</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-
+	<servlet-mapping>
+		<servlet-name>nutz-demo</servlet-name>
+		<url-pattern>/index</url-pattern>
+	</servlet-mapping>
 
 	<!--
 		Nutz.Mvc 还提供了一个过滤器，你可以用这个过滤器为所有的直接访问的 jsp 设置必要的 Request 属性。 比如 ${base}
 		以及 ${msg}
 	-->
-	<filter>
-		<filter-name>msgs</filter-name>
-		<filter-class>org.nutz.mvc.NutFilter</filter-class>
-		<init-param>
-			<param-name>skip-mode</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>msgs</filter-name>
-		<url-pattern>*.html</url-pattern>
-	</filter-mapping>
-
-	<filter-mapping>
-		<filter-name>msgs</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
-
-	<filter-mapping>
-		<filter-name>msgs</filter-name>
-		<url-pattern>*.jspx</url-pattern>
-	</filter-mapping>
-
 
 
 	<!--
